...

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line1"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/search_add_container"
        app:layout_constraintTop_toBottomOf="@+id/app_header">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>

        <ImageView
            android:id="@+id/filter_button"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/filter_icon"
            app:tint="@color/black"
            android:clickable="true"
            android:contentDescription="filter icon" />
...
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/filter_border">
                    <ImageView
                        android:id="@+id/calendar_button"
                        android:clickable="true"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/calendar_icon"
                        android:layout_gravity="center"
...
                        android:layout_height="18dp"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/search_icon"
                        android:layout_gravity="center"
                        android:contentDescription="search icon" />
                    <EditText
                        android:id="@+id/keyword_field"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:autoSizeMinTextSize="8sp"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
...
                        android:layout_height="19dp"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/make_icon"
                        android:layout_gravity="center"
                        android:contentDescription="search icon" />
                    <EditText
                        android:id="@+id/make_field"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:maxLength="20"
...
                        android:maxLines="1"
                        android:paddingTop="3dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:text="All"/>
                    <Spinner
                        android:id="@+id/tag_filter_field"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:dropDownSelector="@drawable/spinner_bg"
                        android:popupBackground="@drawable/spinner_bg"
...

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/apply_filter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:paddingVertical="7dp"
                    android:minWidth="0dp"
...
